--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["blog-cli","blog-client", "blog-wasm"]
+members = ["blog-cli", "blog-client", "blog-server", "blog-wasm"]
 resolver = "3"
