--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tonic = { version = "0.14" }
+prost = "0.14"
+tonic-prost = "0.14"
+tokio = { version = "1", features = ["full"] }
+
+[build-dependencies]
+tonic-prost-build = "0.14"
