implemented http server

--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -4,10 +4,28 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tonic = { version = "0.14" }
-prost = "0.14"
-tonic-prost = "0.14"
-tokio = { version = "1", features = ["full"] }
+actix-web = "4"
+argon2 = "0.5"
+chrono = { workspace = true }
+dotenvy = { workspace = true }
+futures-util = { workspace = true }
+actix-web-httpauth = "0.8"
+jsonwebtoken = { version = "10", features = ["rust_crypto"] }
+prost = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+sqlx = { version = "0.8", features = [
+    "runtime-tokio-rustls",
+    "postgres",
+    "chrono",
+] }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tonic = { workspace = true }
+tonic-prost = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+
 
 [build-dependencies]
-tonic-prost-build = "0.14"
+tonic-prost-build = { workspace = true }
