--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = ["blog-cli", "blog-client", "blog-server", "blog-wasm"]
+members = [
+    "blog-cli",
+    "blog-client",
+    "blog-grpc-api",
+    "blog-server",
+    "blog-wasm",
+]
 resolver = "3"
 
 [workspace.dependencies]
@@ -14,7 +20,6 @@ thiserror = "2"
 tokio = { version = "1", features = ["full"] }
 tonic = { version = "0.14" }
 tonic-prost = "0.14"
-tonic-prost-build = "0.14"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
     "env-filter",
