--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 actix-cors = "0.7"
 actix-web = "4"
 argon2 = "0.5"
+blog-grpc-api = { path = "../blog-grpc-api" }
 chrono = { workspace = true }
 clap = { workspace = true }
 dotenvy = { workspace = true }
@@ -27,7 +28,3 @@ tonic = { workspace = true }
 tonic-prost = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-
-
-[build-dependencies]
-tonic-prost-build = { workspace = true }
