--- a/blog-cli/Cargo.toml
+++ b/blog-cli/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+blog-client = { path = "../blog-client" }
+chrono = { workspace = true }
+clap = { workspace = true }
+dotenvy = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
