--- a/blog-wasm/Cargo.toml
+++ b/blog-wasm/Cargo.toml
@@ -7,3 +7,23 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
+gloo-net = "0.6"
+js-sys = "0.3"
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde-wasm-bindgen = "0.6"
+thiserror = { workspace = true }
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Element",
+    "HtmlElement",
+    "Window",
+    "Request",
+    "RequestInit",
+    "Response",
+    "Headers",
+    "console",
+    "Storage",
+] }
