replaced println with tracing

--- a/blog-cli/Cargo.toml
+++ b/blog-cli/Cargo.toml
@@ -10,3 +10,5 @@ clap = { workspace = true }
 dotenvy = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
